<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="141dp">

        <TextView
            android:id="@+id/firstNum"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="\?"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addOrSub"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="\?"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginRight="100dp" />

        <TextView
            android:id="@+id/secondNum"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="\?"
            android:textSize="40dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/generate_10_random_problems" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/addition" />

            <CheckBox
                android:id="@+id/checkSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_marginRight="70dp"
                android:text="@string/subtraction" />

        </LinearLayout>

        <TextView
            android:id="@+id/count"
            android:layout_width="78dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="0 / 10"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/your_answer_here" />

            <EditText
                android:id="@+id/answer"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/answer_is"
                android:inputType="number"
                android:textSize="10dp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="30dp"
                android:text="@string/submit" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
