<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Flashcard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/simpleLogin"
            android:layout_width="198dp"
            android:layout_height="186dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="120dp"
            android:layout_marginRight="120dp"
            android:gravity="center"
            android:text="@string/simple_n_login"
            android:textSize="50dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userText"
                android:layout_width="110dp"
                android:layout_height="57dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:text="@string/username"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/inputUser"
                android:layout_width="150dp"
                android:layout_height="58dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:hint="********"
                android:inputType="textPassword"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="110dp"
                android:layout_height="57dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/password"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="150dp"
                android:layout_height="58dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:hint="********"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="60dp"
            android:onClick="login"
            android:text="@string/login" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>